# These files will end up in the install include directory
# For example, /usr/include
nobase_pkginclude_HEADERS = openblox.h \
obtype.h \
utility.h \
OBException.h \
OBEngine.h \
config.h \
oblibconfig.h \
mem.h \
AssetLocator.h \
BitStream.h \
ClassFactory.h \
ClassMetadata.h \
OBLogger.h \
OBSerializer.h \
Plugin.h \
PluginManager.h \
TaskScheduler.h \
lua/OBLua.h \
lua/OBLua_OBBase.h \
lua/OBLua_OBOS.h \
js/OBJS.h \
instance/BasePart.h \
instance/BasePlayerGui.h \
instance/BaseScript.h \
instance/BaseValue.h \
instance/BindableEvent.h \
instance/BoolValue.h \
instance/Camera.h \
instance/ClientReplicator.h \
instance/Color3Value.h \
instance/CoreGui.h \
instance/DataModel.h \
instance/DoubleConstrainedValue.h \
instance/Folder.h \
instance/Frame.h \
instance/GuiBase2d.h \
instance/GuiBase.h \
instance/GuiLabel.h \
instance/GuiObject.h \
instance/Humanoid.h \
instance/ImageLabel.h \
instance/Instance.h \
instance/IntConstrainedValue.h \
instance/IntValue.h \
instance/LayerCollector.h \
instance/Lighting.h \
instance/LogService.h \
instance/LuaSourceContainer.h \
instance/MeshPart.h \
instance/Model.h \
instance/NetworkClient.h \
instance/NetworkPeer.h \
instance/NetworkReplicator.h \
instance/NetworkServer.h \
instance/NumberValue.h \
instance/ObjectValue.h \
instance/Part.h \
instance/PlayerGui.h \
instance/Player.h \
instance/Players.h \
instance/PVInstance.h \
instance/ReplicatedFirst.h \
instance/ReplicatedStorage.h \
instance/RunService.h \
instance/ScreenGui.h \
instance/Script.h \
instance/ServerReplicator.h \
instance/ServiceProvider.h \
instance/StarterGui.h \
instance/TaskScheduler.h \
instance/UserInputService.h \
instance/Workspace.h \
type/Type.h \
type/CFrame.h \
type/Color3.h \
type/Enum.h \
type/EventConnection.h \
type/Event.h \
type/LuaEnum.h \
type/LuaEnumItem.h \
type/UDim2.h \
type/UDim.h \
type/VarWrapper.h \
type/Vector2.h \
type/Vector3.h
